--- a/index.html
+++ b/index.html
@@ -4,6 +4,17 @@
 <HEAD>
     <title>minesweeper</title>
     <meta charset="UTF-8">
+    <meta name="description" content="minesweeper for web.">
+    <meta property="og:url" content=" https://kurehajime.github.io/minesweeper/" />
+    <meta property="og:type" content=" game" />
+    <meta property="og:title" content=" minesweeper" />
+    <meta property="og:description" content="minesweeper for web." />
+    <meta property="og:site_name" content="minesweeper" />
+    <meta property="og:image"
+        content=" https://user-images.githubusercontent.com/4569916/184470704-1d396d0a-3eb4-4fb8-a150-12eee7d2d39a.png" />
+    <meta name="twitter:card" content="summary" />
+    <meta name="twitter:site" content="@kurehajime" />
+    <meta name="twitter:creator" content="@kurehajime" />
 </HEAD>
 
 <BODY>
