--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
     <meta property="og:site_name" content="minesweeper" />
     <meta property="og:image"
         content=" https://user-images.githubusercontent.com/4569916/184470704-1d396d0a-3eb4-4fb8-a150-12eee7d2d39a.png" />
+    <meta property="og:image:width" content="1280" />
+    <meta property="og:image:height" content="640" />
+    <meta property="og:image:type" content="image/png" />
     <meta name="twitter:card" content="summary" />
     <meta name="twitter:site" content="@kurehajime" />
     <meta name="twitter:creator" content="@kurehajime" />
