--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <HEAD>
     <title>minesweeper</title>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=600px,target-densitydpi=device-dpi">
     <meta name="description" content="minesweeper for web.">
     <meta property="og:url" content=" https://kurehajime.github.io/minesweeper/" />
     <meta property="og:type" content="game" />
